--- a/app/src/main/res/layout/events.xml
+++ b/app/src/main/res/layout/events.xml
@@ -512,6 +512,57 @@
                 android:layout_height="1dip"
                 android:background="#CCCCCC" />
 
+
+            <LinearLayout
+                android:id="@+id/secInfo5"
+                style="@style/rowStyle0"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/lblInfo5"
+                    android:layout_width="40sp"
+                    android:layout_height="wrap_content"
+                    android:text="৮."
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:id="@+id/VlblInfo5"
+                    android:layout_width="200sp"
+                    android:layout_height="wrap_content"
+                    android:text="তথ্য ৫"
+                    android:textSize="20sp" />
+
+                <EditText
+                    android:id="@+id/txtInfo5"
+                    style="@style/customEdit"
+                    android:layout_width="150sp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="10sp"
+                    android:inputType="text"
+                    android:maxLength="10"
+                    android:textSize="20sp" />
+
+                <Spinner
+                    android:id="@+id/spnInfo5"
+                    android:layout_width="300sp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0"
+                    android:drawSelectorOnTop="true"
+                    android:prompt="@string/planet_prompt"
+                    android:textSize="20sp"/>
+            </LinearLayout>
+
+            <View
+                android:id="@+id/lineInfo5"
+                android:layout_width="fill_parent"
+                android:layout_height="1dip"
+                android:background="#CCCCCC" />
+
+
+
+
             <LinearLayout
                 android:id="@+id/secVDate"
                 style="@style/rowStyle0"
