--- a/app/src/main/res/layout/member_list.xml
+++ b/app/src/main/res/layout/member_list.xml
@@ -188,7 +188,7 @@
 
         <Button
             android:id="@+id/btnSB"
-            android:layout_width="wrap_content"
+            android:layout_width="20sp"
             android:layout_height="match_parent"
             android:layout_marginBottom="5sp"
             android:layout_marginLeft="0sp"
@@ -199,22 +199,35 @@
             android:text="মৃত জন্মের তালিকা"
             android:textSize="16sp" />
 
-        <TextView
-            android:id="@+id/lblBlank"
-            android:layout_width="140dp"
-            android:layout_height="wrap_content"
-            android:layout_column="1"
-            android:layout_weight="0.10"
-            android:gravity="left"
-            android:textSize="17sp" />
+        <!--<Button-->
+            <!--android:id="@+id/btnScreening"-->
+            <!--android:layout_width="20sp"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_marginBottom="5sp"-->
+            <!--android:layout_marginLeft="10sp"-->
+            <!--android:layout_marginRight="0sp"-->
+            <!--android:layout_marginTop="5sp"-->
+            <!--android:layout_weight="1"-->
+            <!--android:background="@drawable/button_style"-->
+            <!--android:text="Screening Form"-->
+            <!--android:textSize="16sp" />-->
+
+        <!--<TextView-->
+            <!--android:id="@+id/lblBlank"-->
+            <!--android:layout_width="140dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_column="1"-->
+            <!--android:layout_weight="0.10"-->
+            <!--android:gravity="left"-->
+            <!--android:textSize="17sp" />-->
         <!--android:visibility="gone" />-->
 
         <Button
             android:id="@+id/btnErrorCheck"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="20sp"
+            android:layout_height="match_parent"
             android:layout_marginBottom="5sp"
-            android:layout_marginLeft="0sp"
+            android:layout_marginLeft="10sp"
             android:layout_marginRight="0sp"
             android:layout_marginTop="5sp"
             android:layout_weight="1"
