--- a/app/src/main/res/layout/member_list.xml
+++ b/app/src/main/res/layout/member_list.xml
@@ -61,9 +61,9 @@
 
     <LinearLayout
         android:id="@+id/secVill"
-        style="@style/rowStyle1"
+        style="@style/rowStyle1" android:paddingTop="3dp" android:paddingBottom="3dp"
         android:layout_width="fill_parent"
-        android:layout_height="46dp"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:weightSum="1">
 
@@ -77,7 +77,7 @@
         <EditText
             android:id="@+id/txtVill"
             android:layout_width="130dp"
-            android:layout_height="40sp"
+            android:layout_height="wrap_content"
             android:layout_marginRight="40sp"
             android:layout_weight="0.06"
             android:inputType="text"
@@ -134,12 +134,12 @@
 
     </LinearLayout>
 
-    <!--<View android:id="@+id/lineVill" android:layout_height="1dip" android:layout_width="fill_parent" android:background="#CCCCCC" />-->
+    <View android:id="@+id/lineVill" android:layout_height="1dip" android:layout_width="fill_parent" android:background="#CCCCCC" />
 
     <LinearLayout
-        style="@style/rowStyle1"
+        style="@style/rowStyle1" android:paddingTop="3dp" android:paddingBottom="3dp"
         android:layout_width="fill_parent"
-        android:layout_height="38dp"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <TextView
@@ -183,13 +183,13 @@
     <LinearLayout
         style="@style/rowStyle0"
         android:layout_width="match_parent"
-        android:layout_height="65dp"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/btnSB"
             android:layout_width="20sp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="5sp"
             android:layout_marginLeft="0sp"
             android:layout_marginRight="0sp"
@@ -225,7 +225,7 @@
         <Button
             android:id="@+id/btnErrorCheck"
             android:layout_width="20sp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="5sp"
             android:layout_marginLeft="10sp"
             android:layout_marginRight="0sp"
